--- a/FlashStash/Storyboards/Base.lproj/Main.storyboard
+++ b/FlashStash/Storyboards/Base.lproj/Main.storyboard
@@ -206,31 +206,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l1a-mu-d7Q">
-                                <rect key="frame" x="16.666666666666657" y="16" width="380.66666666666674" height="656"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l1a-mu-d7Q">
+                                <rect key="frame" x="0.0" y="16" width="414" height="656"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="15" minimumInteritemSpacing="40" id="org-CM-meq">
-                                    <size key="itemSize" width="149" height="206"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="org-CM-meq">
+                                    <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cardCVCell" id="Mob-0G-Db1" customClass="CardListCollectionViewCell" customModule="FlashStash" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="149" height="206"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="149" height="206"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xcaCardListCell" translatesAutoresizingMaskIntoConstraints="NO" id="S3G-Zc-5ga">
-                                                    <rect key="frame" x="0.0" y="0.0" width="149" height="206"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="206"/>
                                                 </imageView>
                                                 <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gj2-zI-ily">
-                                                    <rect key="frame" x="10" y="28" width="129" height="168"/>
+                                                    <rect key="frame" x="10" y="28" width="30" height="168"/>
                                                 </imageView>
                                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ro8-e0-gL4">
-                                                    <rect key="frame" x="10" y="28" width="129" height="168"/>
+                                                    <rect key="frame" x="10" y="28" width="30" height="168"/>
                                                     <string key="text">Cauliflower cheese macaroni cheese cut the cheese. Gouda hard cheese cheesecake gouda manchego cheesy feet danish fontina queso. The big cheese stinking bishop cow roquefort goat cheese triangles cheese slices danish fontina.</string>
                                                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="10"/>
                                                     <nil key="textColor"/>
@@ -280,7 +280,7 @@
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.25" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add A Card To This Deck!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3sE-O2-VTl">
-                                <rect key="frame" x="86.000000000000014" y="68" width="242.33333333333337" height="117"/>
+                                <rect key="frame" x="80.666666666666686" y="68" width="253" height="117"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="117" id="GFd-PO-edk"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="253" id="kpI-4q-94J"/>
@@ -298,7 +298,7 @@
                             <constraint firstItem="n2r-lJ-MpR" firstAttribute="bottom" secondItem="6Ku-Fm-oTT" secondAttribute="bottom" constant="48" id="Rrn-OL-Sxn"/>
                             <constraint firstItem="n2r-lJ-MpR" firstAttribute="bottom" secondItem="l1a-mu-d7Q" secondAttribute="bottom" id="XwF-h7-Xsy"/>
                             <constraint firstItem="3sE-O2-VTl" firstAttribute="top" secondItem="n2r-lJ-MpR" secondAttribute="top" constant="68" id="c7f-sU-LFo"/>
-                            <constraint firstItem="l1a-mu-d7Q" firstAttribute="width" secondItem="Brs-zY-EtZ" secondAttribute="width" multiplier="0.92" id="f6g-zH-tmj"/>
+                            <constraint firstItem="l1a-mu-d7Q" firstAttribute="width" secondItem="Brs-zY-EtZ" secondAttribute="width" id="f6g-zH-tmj"/>
                             <constraint firstItem="l1a-mu-d7Q" firstAttribute="top" secondItem="n2r-lJ-MpR" secondAttribute="top" constant="16" id="wVk-Xd-PAN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n2r-lJ-MpR"/>
