--- a/FlashStash/Storyboards/Base.lproj/Main.storyboard
+++ b/FlashStash/Storyboards/Base.lproj/Main.storyboard
@@ -698,7 +698,7 @@
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" red="0.15294117647058825" green="0.52941176470588236" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.0" green="0.54509803921568623" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -1001,6 +1001,7 @@
                             <constraint firstItem="9Wt-XQ-qV9" firstAttribute="height" secondItem="mve-lC-yUq" secondAttribute="height" multiplier="0.47" id="t0J-zB-fUe"/>
                             <constraint firstItem="2WR-mP-KXt" firstAttribute="leading" secondItem="mve-lC-yUq" secondAttribute="leading" constant="8" id="ud1-kr-oq2"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="WRt-6l-mHe"/>
                     </view>
                     <connections>
                         <outlet property="bottomCardImageView" destination="7Rv-So-ib9" id="BAr-a7-fS4"/>
@@ -1043,6 +1044,7 @@
                             <constraint firstItem="MMP-Cz-gvU" firstAttribute="top" secondItem="zmF-kf-pte" secondAttribute="top" constant="8" id="jvy-Ei-IbL"/>
                             <constraint firstItem="nrw-Wp-kjW" firstAttribute="centerX" secondItem="MMP-Cz-gvU" secondAttribute="centerX" id="vhH-oN-HQG"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="BpR-T7-EHR"/>
                     </view>
                     <connections>
                         <outlet property="cardImageView" destination="nrw-Wp-kjW" id="JgA-MK-q47"/>
@@ -1061,6 +1063,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="340" height="469"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="c2h-VY-neL"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sMt-ii-zEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
